[package]
name = "RuSStReader"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.40"
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
feed-rs = "2.3.1"
html-entities = "0.1.0"
html2text = "0.14.2"
quick-xml = "0.37.2"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rss = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
xml_schema_generator = "0.6.18"
